Fix scrollbar on Linux browsers.

--- a/jekyll/assets/css/main.scss
+++ b/jekyll/assets/css/main.scss
@@ -329,7 +329,7 @@ code {
   width: 100%;
   background: white;
   box-shadow: inset 0 -2px 0 #dfdfdf;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .tab {
